# turtlebot3burger

./: .gitignore  CMakeLists.txt  README.md  pack_for_submission.sh  pack_for_submission_t1.sh  pack_for_submission_turtlebot.sh  package.xml
doc/: measurements.xlsx
launch/: simulator.launch  startup.launch
launch/task2/: autoFollow.launch  autoRotate.launch
launch/task3/: automove.launch  teleopKeyAutostop.launch
msg/: CustomSound.msg  EulerAngles.msg  Movement.msg  ScanAnalyzed.msg
scripts/: autostart.sh  batteryGuardNode.py  moveAnalyzeNode.py  quaternionToEulerNode.py  scanAnalyzeNode.py  simulationFeatureNode.py  soundNode.py  util.py
scripts/task2/: autoFollowNode.py  autoRotateNode.py
scripts/task3/: automoveNode.py  guardNode.py
srv/: SetSpeed.srv
task1/: Anmerkungen.txt  moveTurtles.sh  playBag.sh  start.sh  stop.sh
